SimpleParser/simpleparser.cpp
#include "simpleparser.h"
#include "simplesymboltable.h"
#include <QDebug>

#include "simplenode.h"

#include "variablenode.h"
#include "datanode.h"
#include "programnode.h"
#include "functioncallnode.h"
#include "assignmentnode.h"

#include "unaryoperationnodes.h"
#include "binaryoperationnodes.h"
#include "ternaryoperationnodes.h"

#include "simplesymboltableentry.h"
#include "simplesymboltable.h"
#include "variablesymbol.h"
#include "functionsymbol.h"

#include "simplestack.h"

SimpleParser::SimpleParser(SimpleLexer *lexer, QSharedPointer<SimpleSymbolTable> parentSymblTbl) :
    lexer(lexer),
    CurrentToken(lexer->getNextToken()),
    ParentSymblTbl(parentSymblTbl),
    ProgramSymbolTable(new SimpleSymbolTable(QString("ProgramSymbolTable"), ParentSymblTbl)),
    CurSymblTbl(NULL),
    ErrorOccured(false)
{
    ParentSymblTbl->addSubSymbolTable(ProgramSymbolTable);
}

SimpleParser::~SimpleParser()
{
    qDebug() << __PRETTY_FUNCTION__;
    ParentSymblTbl->removeSubSymbolTable(ProgramSymbolTable->getIdentifier());
}

std::unique_ptr<SimpleNode> SimpleParser::ParseToAST()
{
    std::unique_ptr<SimpleNode> node;
    if(CurrentToken->getTokenType() != SimpleToken::EOFToken)
    {
        node = Program();

        if(CurrentToken->getTokenType() != SimpleToken::EOFToken)
        {
            qDebug() << __PRETTY_FUNCTION__ << ": NOT EOF";
            if(node != nullptr)
            {
                EOFExpectedError(CurrentToken, QString("EOF was expected but not there was still input..."));
                return nullptr;
            }
        }

    }
    qDebug() << __PRETTY_FUNCTION__ << ": EOF";
    return std::move(node);
}

QSharedPointer<SimpleSymbolTable> SimpleParser::getProgramSymblTbl()
{
    return ProgramSymbolTable;
}

void SimpleParser::eat(SimpleToken::TokenType tokenType)
{
    if(CurrentToken->getTokenType() != tokenType)
    {
        qDebug() << __PRETTY_FUNCTION__ << ": ERROR --> Expected: " << SimpleToken::convertTokenTypeToString(tokenType)
                 << " but got: " << SimpleToken::convertTokenTypeToString(CurrentToken->getTokenType());
        TypeError(CurrentToken,QString("Expected: %1").arg(SimpleToken::convertTokenTypeToString(tokenType)));
    }
    else
    {
        qDebug() << "Eating: " << SimpleToken::convertTokenTypeToString(tokenType);
        CurrentToken = lexer->getNextToken();
    }
}

std::unique_ptr<ProgramNode> SimpleParser::Program()
{
    SharedSimpleTokenPtr token = CurrentToken;
    QSharedPointer<SimpleSymbolTable> SavedSymbolTable = CurSymblTbl;

    std::unique_ptr<ProgramNode> programNode(new ProgramNode(QString("Program"), ProgramSymbolTable));

    CurSymblTbl = ProgramSymbolTable;

    // // // Variable or Function Definitions // // //
    while(CurrentToken->getTokenType() == SimpleToken::TypeName)
    {
        // // // Variable Definition // // //
        token = CurrentToken;
        std::unique_ptr<SimpleNode> newVarDefinition = VarDefinition();
        if(newVarDefinition == nullptr)
        {
            if(ErrorOccured==true)
            {
                CurSymblTbl = SavedSymbolTable;
                return nullptr;
            }
            lexer->ResetLexerToToken(token);
            CurrentToken = token;
        }
        else
        {
            programNode->addExpression(newVarDefinition);
            continue;
        }
        // // // Function Definition // // //
        QSharedPointer<FunctionSymbol> newFuncDefinition = FunctionDefinition();
        if(newFuncDefinition == nullptr)
        {
            lexer->ResetLexerToToken(token);
            CurrentToken = token;
            break;
        }
        else
        {
            programNode->addFunctionDefinition(newFuncDefinition);
        }
    }

    while(CurrentToken->getTokenType() != SimpleToken::ReturnKeyword)
    {
        token = CurrentToken;
        std::unique_ptr<SimpleNode> ProgramExpression = Expression();
        if(ProgramExpression == nullptr)
        {
            SyntacticError(token, QString("Expected Expression!"));
            CurSymblTbl = SavedSymbolTable;
            return Q_NULLPTR;
        }
        programNode->addExpression(ProgramExpression);
        eat(SimpleToken::SemiColonDelim);
    }


    std::unique_ptr<SimpleNode> ProgramReturnStatement = ReturnStatement();
    if(ProgramReturnStatement == nullptr)
    {
        SyntacticError(token, QString("Expected Return Statement!"));
        CurSymblTbl = SavedSymbolTable;
        return Q_NULLPTR;
    }
    programNode->addReturnStatement(std::move(ProgramReturnStatement));

    qDebug() << __PRETTY_FUNCTION__ << ": " << programNode->printNode();
    CurSymblTbl = SavedSymbolTable;
    return programNode;
}

QSharedPointer<FunctionSymbol> SimpleParser::FunctionDefinition()
{
    QSharedPointer<SimpleSymbolTable> SavedSymbolTable = CurSymblTbl;
    QSharedPointer<FunctionSymbol> DeclaredFuncSymbol = FunctionDeclaration();

    if(DeclaredFuncSymbol == nullptr)
    {
        CurSymblTbl = SavedSymbolTable;
        return QSharedPointer<FunctionSymbol>();
    }
    Node::ValueTypes returnType = DeclaredFuncSymbol->getReturnType();
    SharedSimpleTokenPtr token = CurrentToken;

    if(CurrentToken->getTokenType() == SimpleToken::LCurlyParan)
    {
        eat(SimpleToken::LCurlyParan);
        std::vector<std::unique_ptr<SimpleNode>> FuncExpressions;

        while(CurrentToken->getTokenType() == SimpleToken::TypeName)
        {
            // // // Variable Definition // // //
            token = CurrentToken;
            std::unique_ptr<SimpleNode> newVarDefinition = VarDefinition();
            if(newVarDefinition == nullptr)
            {
                continue;
            }
            FuncExpressions.emplace_back(std::move(newVarDefinition));
        }

        std::unique_ptr<SimpleNode> ExpressionNode;

        while(CurrentToken->getTokenType() != SimpleToken::ReturnKeyword)
        {
            ExpressionNode = Expression();
            if(ExpressionNode != nullptr)
            {
                eat(SimpleToken::SemiColonDelim);
                //ToDO !!!
                FuncExpressions.emplace_back(std::move(ExpressionNode));
            }
            else
            {
                SyntacticError(CurrentToken, QString("Expected Expression or Return... got neither!"));
            }
        }

        std::unique_ptr<SimpleNode> ReturnStatementNode = ReturnStatement();
        if(!SimpleNode::canConvertTypes(returnType, ReturnStatementNode->getReturnType()))
        {
            TypeError(CurrentToken, QString("Expected: %1 but got: %2")
                      .arg(SimpleNode::getHumanReadableTypeNameToValueType(returnType))
                      .arg(SimpleNode::getHumanReadableTypeNameToValueType(ReturnStatementNode->getReturnType()))
                      );
            return QSharedPointer<FunctionSymbol>();
        }
        eat(SimpleToken::RCurlyParan);

        DeclaredFuncSymbol->addFunctionExpressions(FuncExpressions);
        DeclaredFuncSymbol->addFunctionReturnStatement(std::move(ReturnStatementNode));
        if(returnType == Node::ErrorType)
        {
            //            CurSymblTbl = &SymblTbl;

            CurSymblTbl = SavedSymbolTable;
            return QSharedPointer<FunctionSymbol>();
        }

        //        eat(SimpleToken::SemiColonDelim);
    }
    else
    {
        //        CurSymblTbl = &SymblTbl;

        SyntacticError(CurrentToken, QString("Expected FunctionDeclaration!"));
        CurSymblTbl = SavedSymbolTable;
        return QSharedPointer<FunctionSymbol>();
    }

    SavedSymbolTable->addEntry(qSharedPointerDynamicCast<SimpleSymbolTableEntry>(DeclaredFuncSymbol));

    CurSymblTbl = SavedSymbolTable;

    qDebug() << __PRETTY_FUNCTION__ << ": " << DeclaredFuncSymbol->PrintToSymbolToString();
    //    CurSymblTbl = &SymblTbl;
    return DeclaredFuncSymbol;
}

QSharedPointer<FunctionSymbol> SimpleParser::FunctionDeclaration()
{
    QSharedPointer<FunctionSymbol> FuncSymbol;
    SharedSimpleTokenPtr token;

    QSharedPointer<SimpleSymbolTable> SavedSymbolTable = CurSymblTbl;

    if(CurrentToken->getTokenType() == SimpleToken::TypeName)
    {
        token = CurrentToken;
        eat(SimpleToken::TypeName);
        Node::ValueTypes returnType = qSharedPointerDynamicCast<TypeNameToken>(token)->getType();

        token = CurrentToken;
        eat(SimpleToken::VariableID);
        QString FuncName = qSharedPointerDynamicCast<VariableIDToken>(token)->getID();

        QSharedPointer<SimpleSymbolTable> functionSymbolTable(new SimpleSymbolTable(QString("%1_SymbolTable").arg(FuncName)));
        CurSymblTbl = functionSymbolTable;

        eat(SimpleToken::LParan);
        std::vector<QSharedPointer<VariableSymbol>> parameters;
        while(CurrentToken->getTokenType() == SimpleToken::TypeName)
        {
            QSharedPointer<VariableSymbol> varSymbolDeclaration = VarDeclaration();
            if(varSymbolDeclaration == nullptr)
            {
                qDebug() << "INVALID Variable Declaration";
                return QSharedPointer<FunctionSymbol>();
            }
            parameters.push_back(varSymbolDeclaration);
            if(CurrentToken->getTokenType() != SimpleToken::CommaDelim)
            {
                break;
            }
            else
            {
                eat(SimpleToken::CommaDelim);
                if(CurrentToken->getTokenType() != SimpleToken::TypeName)
                {
                    SyntacticError(CurrentToken, QString("Expected another VariableDeclaration after CommaDelimiter!"));
                    return QSharedPointer<FunctionSymbol>();
                }
            }
        }

        eat(SimpleToken::RParan);

        FuncSymbol = QSharedPointer<FunctionSymbol>(
                    new FunctionSymbol(
                        FuncName,
                        functionSymbolTable,
                        std::move(parameters),
                        returnType
                        )
                    );
        functionSymbolTable->addParentSymbolTable(SavedSymbolTable);
    }

    if(FuncSymbol == nullptr)
    {
        SyntacticError(CurrentToken,QString("Expected Function Declaration"));
        return QSharedPointer<FunctionSymbol>();
    }
    qDebug() << __PRETTY_FUNCTION__ << ": " << FuncSymbol->PrintToSymbolToString();
    return FuncSymbol;
}

std::unique_ptr<SimpleNode> SimpleParser::VarDefinition()
{
    QSharedPointer<VariableSymbol> VarDeclarationSymbol = VarDeclaration();

    std::unique_ptr<SimpleNode> node;
    std::unique_ptr<SimpleNode> nodeTwo;
    if(VarDeclarationSymbol == nullptr)
    {
        return nullptr;
    }

    SharedSimpleTokenPtr token = CurrentToken;
    if(CurrentToken->getTokenType() == SimpleToken::Assign)
    {
        eat(SimpleToken::Assign);
        nodeTwo = Expression();
        if(nodeTwo == nullptr)
        {
            return nullptr;
        }
        Node::ValueTypes exprReturnType = nodeTwo->getReturnType();
        if( ( exprReturnType == Node::ErrorType ) || ( !SimpleNode::canConvertTypes(VarDeclarationSymbol->getReturnType(), exprReturnType) ) )
        {
            TypeError(
                        token,
                        QString("Expected: %1, was: %2")
                        .arg(SimpleNode::getHumanReadableTypeNameToValueType(VarDeclarationSymbol->getReturnType()))
                        .arg(SimpleNode::getHumanReadableTypeNameToValueType(nodeTwo->getReturnType()))
                        );
            return nullptr;
        }

        node = std::unique_ptr<SimpleNode>(
                    new AssignmentNode(
                        //                        std::move(
                        std::unique_ptr<VariableNode>(
                            new VariableNode(
                                VarDeclarationSymbol
                                )
                            //                                )
                            ),
                        std::move(nodeTwo)
                        )
                    );
    }

    eat(SimpleToken::SemiColonDelim);

    if(node == nullptr)
    {
        return nullptr;
    }

    qDebug() << __PRETTY_FUNCTION__ << ": " << node->printNode();
    return node;
}

QSharedPointer<VariableSymbol> SimpleParser::VarDeclaration()
{
    QSharedPointer<VariableSymbol> varDeclarationSymbol;
    SharedSimpleTokenPtr InitialToken = CurrentToken;
    SharedSimpleTokenPtr token;

    if(CurrentToken->getTokenType() == SimpleToken::TypeName)
    {
        token = CurrentToken;
        eat(SimpleToken::TypeName);
        if(CurrentToken->getTokenType() == SimpleToken::VariableID)
        {
            if(lexer->peekAtNextToken()->getTokenType() == SimpleToken::LParan)
            {
                return QSharedPointer<VariableSymbol>();
            }
            Node::ValueTypes type = qSharedPointerDynamicCast<TypeNameToken>(token)->getType();
            token = CurrentToken;
            eat(SimpleToken::VariableID);
            QString VariableID = qSharedPointerDynamicCast<VariableIDToken>(token)->getID();
            //            SymbolTableToRegisterVariableTo->addEntry(VariableID, new VariableSymbol(VariableID, type));
            if(CurSymblTbl->DoesIdentifierExistInCurrentScope(VariableID))
            {
                qDebug() << "VARIABLE DOES ALREADY EXIST!";
                SyntacticError(token, QString("Variable was already declared in this scope!"));
                return QSharedPointer<VariableSymbol>();
            }
            varDeclarationSymbol = QSharedPointer<VariableSymbol>(new VariableSymbol(VariableID, type));
        }
    }

    if(varDeclarationSymbol == nullptr)
    {
        return QSharedPointer<VariableSymbol>();
    }

    CurSymblTbl->addEntry(varDeclarationSymbol);

    qDebug() << __PRETTY_FUNCTION__ << ": " << varDeclarationSymbol->PrintToSymbolToString();
    return varDeclarationSymbol;
}

std::unique_ptr<SimpleNode> SimpleParser::ReturnStatement()
{
    std::unique_ptr<SimpleNode> node;
    SharedSimpleTokenPtr token = CurrentToken;

    if(CurrentToken->getTokenType() == SimpleToken::ReturnKeyword)
    {
        eat(SimpleToken::ReturnKeyword);
        node = Expression();
        if(node == nullptr)
        {
            node = std::unique_ptr<SimpleNode>(new VoidValueNode());
        }
        eat(SimpleToken::SemiColonDelim);
    }

    if(node == nullptr)
    {
        return nullptr;
    }

    qDebug() << __PRETTY_FUNCTION__ << ": " << node->printNode();
    return std::move(node);
}

std::unique_ptr<SimpleNode> SimpleParser::Expression()
{
    std::unique_ptr<SimpleNode> node = AssignmentExpression();
    if(node == nullptr)
    {
        return nullptr;
    }
    SharedSimpleTokenPtr token = CurrentToken;

    qDebug() << __PRETTY_FUNCTION__ << ": " << node->printNode();
    return std::move(node);
}

std::unique_ptr<SimpleNode> SimpleParser::AssignmentExpression()
{
    std::unique_ptr<SimpleNode> node = ConditionalExpression();
    if(node == nullptr)
    {
        return Q_NULLPTR;
    }
    SharedSimpleTokenPtr token = CurrentToken;

    while(node->getNodeType() == Node::Variable)
    {
        std::unique_ptr<SimpleNode> nodeTwo;
        switch(CurrentToken->getTokenType())
        {
        case SimpleToken::Assign:
            eat(SimpleToken::Assign);
            token = CurrentToken;
            nodeTwo = AssignmentExpression();
            if(nodeTwo == nullptr)
            {
                SyntacticError(CurrentToken, QString("Assignable Value expected!"));
                return Q_NULLPTR;
            }
            if(SimpleNode::canConvertTypes(node->getReturnType(), nodeTwo->getReturnType()))
            {
                std::unique_ptr<VariableNode> varNode(dynamic_cast<VariableNode*>(node.release()));
                node.reset(new AssignmentNode(std::move(varNode), std::move(nodeTwo)));
            }
            else
            {
                TypeError(
                            token,
                            QString("Expected: %1, but got %2")
                            .arg(SimpleNode::getHumanReadableTypeNameToValueType(node->getReturnType()))
                            .arg(SimpleNode::getHumanReadableTypeNameToValueType(nodeTwo->getReturnType()))
                            );
                return Q_NULLPTR;
            }
            break;
        default:
            return std::move(node);
        }
    }
    qDebug() << __PRETTY_FUNCTION__ << ": " << node->printNode();
    return std::move(node);
}

std::unique_ptr<SimpleNode> SimpleParser::ConditionalExpression()
{
    std::unique_ptr<SimpleNode> node = LogicalORExpression();
    if(node == nullptr)
    {
        return Q_NULLPTR;
    }
    std::unique_ptr<SimpleNode> nodeTwo;
    std::unique_ptr<SimpleNode> nodeThree;
    SharedSimpleTokenPtr token = CurrentToken;


    if( CurrentToken->getTokenType() == SimpleToken::QMark )
    {
        token = CurrentToken;
        eat(SimpleToken::QMark);
        nodeTwo = ConditionalExpression();
        if(nodeTwo == nullptr)
        {
            SyntacticError(token);
            return Q_NULLPTR;
        }
        token = CurrentToken;
        eat(SimpleToken::Colon);
        nodeThree = ConditionalExpression();
        if(nodeThree == nullptr)
        {
            SyntacticError(token);
            return Q_NULLPTR;
        }
        node.reset(new ConditionalNode(std::move(node), std::move(nodeTwo), std::move(nodeThree)));
        if(node->getReturnType() == Node::ErrorType)
        {
            TypeError(token, QString("Expected: bool ? Integer|Double|Bool|String : Integer|Double|Bool|String ..."));
            return Q_NULLPTR;
        }
    }

    qDebug() << __PRETTY_FUNCTION__ << ": " << node->printNode();
    return std::move(node);
}

std::unique_ptr<SimpleNode> SimpleParser::LogicalORExpression()
{
    std::unique_ptr<SimpleNode> node = LogicalXORExpression();
    if(node == nullptr)
    {
        return Q_NULLPTR;
    }
    std::unique_ptr<SimpleNode> nodeTwo;
    bool ContinueLoop = true;

    do
    {
        SharedSimpleTokenPtr token = CurrentToken;
        switch(CurrentToken->getTokenType())
        {
        case SimpleToken::LogicalOR:
            eat(SimpleToken::LogicalOR);
            nodeTwo = LogicalXORExpression();
            if(nodeTwo == nullptr)
            {
                SyntacticError(CurrentToken);
                return Q_NULLPTR;
            }
            node.reset(new LogicalORNode(std::move(node), std::move(nodeTwo)));
            if(node == nullptr)
            {
                return Q_NULLPTR;
            }
            if(node->getReturnType() == Node::ErrorType)
            {
                TypeError(token, QString("Expected: Integer || (Integer|Double|Bool) | Double || (Integer|Double|Bool) | Bool || (Integer|Double|Bool) ..."));
                return Q_NULLPTR;
            }
            break;
        default:
            ContinueLoop = false;
        }
    }while(ContinueLoop);

    qDebug() << __PRETTY_FUNCTION__ << ": " << node->printNode();
    return std::move(node);
}

std::unique_ptr<SimpleNode> SimpleParser::LogicalXORExpression()
{
    std::unique_ptr<SimpleNode> node = LogicalANDExpression();
    if(node == nullptr)
    {
        return Q_NULLPTR;
    }
    std::unique_ptr<SimpleNode> nodeTwo;
    bool ContinueLoop = true;

    do
    {
        SharedSimpleTokenPtr token = CurrentToken;
        switch(CurrentToken->getTokenType())
        {
        case SimpleToken::LogicalXOR:
            eat(SimpleToken::LogicalXOR);
            nodeTwo = LogicalANDExpression();
            if(nodeTwo == nullptr)
            {
                SyntacticError(CurrentToken);
                return Q_NULLPTR;
            }
            node.reset(new LogicalXORNode(std::move(node), std::move(nodeTwo)));
            if(node == nullptr)
            {
                return Q_NULLPTR;
            }
            if(node->getReturnType() == Node::ErrorType)
            {
                TypeError(token, QString("Expected: Integer ^^ (Integer|Double|Bool) | Double ^^ (Integer|Double|Bool) | Bool ^^ (Integer|Double|Bool)..."));
                return Q_NULLPTR;
            }
            break;
        default:
            ContinueLoop = false;
        }
    }while(ContinueLoop);

    qDebug() << __PRETTY_FUNCTION__ << ": " << node->printNode();
    return std::move(node);
}

std::unique_ptr<SimpleNode> SimpleParser::LogicalANDExpression()
{
    std::unique_ptr<SimpleNode> node = BitwiseORExpression();
    if(node == nullptr)
    {
        return Q_NULLPTR;
    }
    std::unique_ptr<SimpleNode> nodeTwo;
    bool ContinueLoop = true;

    do
    {
        SharedSimpleTokenPtr token = CurrentToken;
        switch(CurrentToken->getTokenType())
        {
        case SimpleToken::LogicalAND:
            eat(SimpleToken::LogicalAND);
            nodeTwo = BitwiseORExpression();
            if(nodeTwo == nullptr)
            {
                SyntacticError(CurrentToken);
                return Q_NULLPTR;
            }
            node.reset(new LogicalANDNode(std::move(node), std::move(nodeTwo)));
            if(node == nullptr)
            {
                return Q_NULLPTR;
            }
            if(node->getReturnType() == Node::ErrorType)
            {
                TypeError(token, QString("Expected: Integer && (Integer|Double|Bool) | Double && (Integer|Double|Bool) | Bool && (Integer|Double|Bool) ..."));
                return Q_NULLPTR;
            }
            break;
        default:
            ContinueLoop = false;
        }
    }while(ContinueLoop);

    qDebug() << __PRETTY_FUNCTION__ << ": " << node->printNode();
    return std::move(node);
}

std::unique_ptr<SimpleNode> SimpleParser::BitwiseORExpression()
{
    std::unique_ptr<SimpleNode> node = BitwiseXORExpression();
    if(node == nullptr)
    {
        return Q_NULLPTR;
    }
    std::unique_ptr<SimpleNode> nodeTwo;
    bool ContinueLoop = true;

    do
    {
        SharedSimpleTokenPtr token = CurrentToken;
        switch(CurrentToken->getTokenType())
        {
        case SimpleToken::BitwiseOR:
            eat(SimpleToken::BitwiseOR);
            nodeTwo = BitwiseXORExpression();
            if(nodeTwo == nullptr)
            {
                SyntacticError(CurrentToken);
                return Q_NULLPTR;
            }
            node.reset(new ORNode(std::move(node), std::move(nodeTwo)));
            if(node == nullptr)
            {
                return Q_NULLPTR;
            }
            if(node->getReturnType() == Node::ErrorType)
            {
                TypeError(token, QString("Expected: Integer | Integer"));
                return Q_NULLPTR;
            }
            break;
        default:
            ContinueLoop = false;
        }
    }while(ContinueLoop);

    qDebug() << __PRETTY_FUNCTION__ << ": " << node->printNode();
    return std::move(node);
}

std::unique_ptr<SimpleNode> SimpleParser::BitwiseXORExpression()
{
    std::unique_ptr<SimpleNode> node = BitwiseANDExpression();
    if(node == nullptr)
    {
        return Q_NULLPTR;
    }
    std::unique_ptr<SimpleNode> nodeTwo;
    bool ContinueLoop = true;

    do
    {
        SharedSimpleTokenPtr token = CurrentToken;
        switch(CurrentToken->getTokenType())
        {
        case SimpleToken::BitwiseXOR:
            eat(SimpleToken::BitwiseXOR);
            nodeTwo = BitwiseANDExpression();
            if(nodeTwo == nullptr)
            {
                SyntacticError(CurrentToken);
                return Q_NULLPTR;
            }
            node.reset(new XORNode(std::move(node), std::move(nodeTwo)));
            if(node == nullptr)
            {
                return Q_NULLPTR;
            }
            if(node->getReturnType() == Node::ErrorType)
            {
                TypeError(token, QString("Expected: Integer ^ Integer"));
                return Q_NULLPTR;
            }
            break;
        default:
            ContinueLoop = false;
        }
    }while(ContinueLoop);

    qDebug() << __PRETTY_FUNCTION__ << ": " << node->printNode();
    return std::move(node);
}

std::unique_ptr<SimpleNode> SimpleParser::BitwiseANDExpression()
{
    std::unique_ptr<SimpleNode> node = EqualityExpression();
    if(node == nullptr)
    {
        return Q_NULLPTR;
    }
    std::unique_ptr<SimpleNode> nodeTwo;
    bool ContinueLoop = true;

    do
    {
        SharedSimpleTokenPtr token = CurrentToken;
        switch(CurrentToken->getTokenType())
        {
        case SimpleToken::BitwiseAND:
            eat(SimpleToken::BitwiseAND);
            nodeTwo = EqualityExpression();
            if(nodeTwo == nullptr)
            {
                SyntacticError(CurrentToken);
                return Q_NULLPTR;
            }
            node.reset(new ANDNode(std::move(node), std::move(nodeTwo)));
            if(node == nullptr)
            {
                return Q_NULLPTR;
            }
            if(node->getReturnType() == Node::ErrorType)
            {
                TypeError(token, QString("Expected: Integer & Integer"));
                return Q_NULLPTR;
            }
            break;
        default:
            ContinueLoop = false;
        }
    }while(ContinueLoop);

    qDebug() << __PRETTY_FUNCTION__ << ": " << node->printNode();
    return std::move(node);
}

std::unique_ptr<SimpleNode> SimpleParser::EqualityExpression()
{
    std::unique_ptr<SimpleNode> node = RelationalExpression();
    if(node == nullptr)
    {
        return Q_NULLPTR;
    }
    std::unique_ptr<SimpleNode> nodeTwo;
    bool ContinueLoop = true;

    do
    {
        SharedSimpleTokenPtr token = CurrentToken;
        switch(CurrentToken->getTokenType())
        {
        case SimpleToken::Equal:
            eat(SimpleToken::Equal);
            nodeTwo = RelationalExpression();
            if(nodeTwo == nullptr)
            {
                SyntacticError(CurrentToken);
                return Q_NULLPTR;
            }
            node.reset(new EqualNode(std::move(node), std::move(nodeTwo)));
            if(node == nullptr)
            {
                return Q_NULLPTR;
            }
            if(node->getReturnType() == Node::ErrorType)
            {
                TypeError(token, QString("Expected: Integer == (Integer|Double)| Double == (Double|Integer) | Bool == (Integer|Double|Bool) | String == string"));
                return Q_NULLPTR;
            }
            break;
        case SimpleToken::Unequal:
            eat(SimpleToken::Unequal);
            nodeTwo = RelationalExpression();
            if(nodeTwo == nullptr)
            {
                SyntacticError(CurrentToken);
                return Q_NULLPTR;
            }
            node.reset(new UnequalNode(std::move(node), std::move(nodeTwo)));
            if(node == nullptr)
            {
                return Q_NULLPTR;
            }
            if(node->getReturnType() == Node::ErrorType)
            {
                TypeError(token, QString("Expected: Integer != (Integer|Double|Bool)| Double != (Double|Integer|Bool) | Bool != (Integer|Double|Bool) | String != string"));
                return Q_NULLPTR;
            }
            break;
        default:
            ContinueLoop = false;
        }
    }while(ContinueLoop);

    qDebug() << __PRETTY_FUNCTION__ << ": " << node->printNode();
    return std::move(node);
}

std::unique_ptr<SimpleNode> SimpleParser::RelationalExpression()
{
    std::unique_ptr<SimpleNode> node = ShiftExpression();
    if(node == nullptr)
    {
        return Q_NULLPTR;
    }
    std::unique_ptr<SimpleNode> nodeTwo;
    bool ContinueLoop = true;
